# xar

./: .gitattributes  .gitignore  .gitmodules  .lvimrc  API_xar.wiki  API_xar_add.wiki  API_xar_add_folder.wiki  API_xar_add_frombuffer.wiki  API_xar_attr_first.wiki  API_xar_attr_get.wiki  API_xar_attr_next.wiki  API_xar_attr_set.wiki  API_xar_close.wiki  API_xar_extract.wiki  API_xar_file_first.wiki  API_xar_file_next.wiki  API_xar_iter_free.wiki  API_xar_iter_new.wiki  API_xar_open.wiki  API_xar_prop_first.wiki  API_xar_prop_get.wiki  API_xar_prop_next.wiki  API_xar_prop_set.wiki  API_xar_register_errhandler.wiki  API_xar_subdoc_copyin.wiki  API_xar_subdoc_copyout.wiki  API_xar_subdoc_first.wiki  API_xar_subdoc_name.wiki  API_xar_subdoc_new.wiki  API_xar_subdoc_next.wiki  API_xar_subdoc_prop_get.wiki  API_xar_subdoc_prop_set.wiki  API_xar_subdoc_remove.wiki  ArchivedMetadata.wiki  MacOSX_Extensions.wiki  Makefile.am  README.md  README.txt  XarArchive.wiki  configure.ac  (+19 more)
XarCMPlugIn/: Info.plist  README.txt  XarCMPlugIn.c
XarCMPlugIn/English.lproj/: InfoPlist.strings
XarCMPlugIn/XarCMPlugin.pbproj/: project.pbxproj
XarCMPlugIn/XarCMPlugin.xcodeproj/: project.pbxproj
XarKit/: .gitignore  Info.plist  Makefile.am  XarArchive.h  XarArchive.m  XarBase.h  XarBase.m  XarEnumerator.h  XarEnumerator.m  XarFile.h  XarFile.m  XarKit.h  XarSubdoc.h  XarSubdoc.m  configure.ac
XarKit/XarKit.xcode/: project.pbxproj
XarKit/XarKit.xcodeproj/: project.pbxproj
build-aux/: mkframework
doc/: Doxyfile.in  Makefile.am
docker/: Dockerfile
include/: config.h.in  xar.h.in
lib/: Makefile.inc.in  archive.c  bzxar.c  darwinattr.c  data.c  ea.c  ea.h  fbsdattr.c  filetree.c  filetree.h  hash.c  linuxattr.c  macho.c  signature.c  stat.c  zxar.c
m4/: .gitignore  Makefile.am  ax_python.m4  ax_python_devel.m4  doxygen.m4
maint/: README.md  alldists.sh
python/: .gitignore  Makefile.am  README.txt  configure.ac  setup.py  test_xarfile.py  xarfile.pyx
src/: xar.1  xar.c
tools/: .gitignore  Makefile  Makefile.am  configure.ac  strextract.c  toc_extract.c  vitoc.1  vitoc.c  xardiff.1  xardiff.c
xar/: .gitignore  CHANGELOG  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  configure.ac  gettext.h  indent.sh  xar.spec  xar.spec.in  xar_README.txt
xar/build-aux/: .gitignore
xar/doc/: .gitignore  Doxyfile.in
xar/include/: .gitignore  Makefile.am  config.h.in  xar.h.in
xar/include/xar/: .gitignore  appledouble.h  archive.h  arcmod.h  asprintf.h  b64.h  bzxar.h  config.h.in  darwinattr.h  data.h  ea.h  ext2.h  fbsdattr.h  filetree.h  hash.h  io.h  linuxattr.h  lzmaxar.h  macho.h  script.h  signature.h  stat.h  strmode.h  subdoc.h  util.h  xar.h  xar.h.in  zxar.h
xar/lib/: .gitignore  Makefile.am  Makefile.inc.in  archive.c  archive.h  arcmod.c  arcmod.h  asprintf.h  b64.c  b64.h  bzxar.c  darwinattr.c  data.c  ea.c  ea.h  err.c  ext2.c  fbsdattr.c  filetree.c  filetree.h  hash.c  intl.c  io.c  io.h  libxar.la.in.in  linuxattr.c  lzmaxar.c  macho.c  script.c  signature.c  stat.c  stat.h  subdoc.c  subdoc.h  util.c  util.h  zxar.c
xar/m4/: .gitignore  Makefile.am  bzlib.m4
xar/po/: .gitignore  LINGUAS  Makevars  POTFILES.in  pl.po
xar/src/: .gitignore  Makefile.am  Makefile.inc.in  xar.1  xar.1.in  xar.c
xar/test/: .gitignore  Makefile.am  attr  buffer.c  checksums  compression  data  demo.xar  functions  hardlink  heap  validate.c
xarmdimport/: GetMetadataForFile.c  Info.plist  main.c  schema.xml
xarmdimport/English.lproj/: InfoPlist.strings  schema.strings
xarmdimport/xar.xcodeproj/: project.pbxproj
xarql/: GeneratePreviewForURL.c  GenerateThumbnailForURL.c  Info.plist  main.c
xarql/English.lproj/: InfoPlist.strings
xarql/xar.xcodeproj/: project.pbxproj
